--- a/Lab_01_py.ipynb
+++ b/Lab_01_py.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtrWgaBzjMN9O5ETAuGp42",
+      "authorship_tag": "ABX9TyM/FzpFFmUa0LA/sV+tqulg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,6 +75,70 @@
         "result = work()\n",
         "t1= time.perf_counter()\n",
         "print(f\"result={result:.6f} | time={(t1-t0):.3f} s\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os,time,random"
+      ],
+      "metadata": {
+        "id": "29eWh5X87ARQ"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import time\n",
+        "import random\n",
+        "\n",
+        "\n",
+        "def estimate_pi(n_samples, seed=42):\n",
+        "    random.seed(seed)\n",
+        "    inside = 0\n",
+        "\n",
+        "    for _ in range(n_samples):\n",
+        "        x = random.random()\n",
+        "        y = random.random()\n",
+        "        if x * x + y * y <= 1.0:\n",
+        "            inside += 1\n",
+        "\n",
+        "    return 4.0 * inside / n_samples\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    # read task index from SLURM / PBS\n",
+        "    tid = int(os.getenv(\"SLURM_ARRAY_TASK_ID\",\n",
+        "                        os.getenv(\"PBS_ARRAYID\", \"0\")))\n",
+        "\n",
+        "    sizes = [50_000, 100_000, 200_000, 400_000, 800_000]\n",
+        "    n_samples = sizes[tid % len(sizes)]\n",
+        "\n",
+        "    t0 = time.perf_counter()\n",
+        "    pi = estimate_pi(n_samples)\n",
+        "    t1 = time.perf_counter()\n",
+        "\n",
+        "    print(f\"TASKID={tid} N={n_samples} Pi≈{pi:.6f} Time={t1 - t0:.4f}s\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qrmKuSPY7lcK",
+        "outputId": "b66d6887-c491-4dfd-918e-4a66971cb9db"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TASKID=0 N=50000 Pi≈3.134640 Time=0.0127s\n"
+          ]
+        }
       ]
     }
   ]
